--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+#Remove footer da página index.html
 <head>
   <meta charset="utf-8">
   <title>Bateria</title>
@@ -22,9 +23,7 @@
   </div>
 
 
-  <footer>
-    tipscode.com.br
-  </footer>
+ 
   <script src="./app.js"></script>
 </body>
 
